--- a/moduloprincipal/vistas/html/head.html
+++ b/moduloprincipal/vistas/html/head.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+		<title>Gimansio</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" type="text/css" href="./moduloprincipal/vistas/css/index.css" />
 		<link rel="stylesheet" type="text/css" href="./moduloprincipal/vistas/css/menu.css" />
@@ -8,9 +9,10 @@
 		<script type="text/javascript" src="jqueryUI.js"></script>
 		<script type="text/javascript" src="./moduloprincipal/js/utilidades.js"></script>
 		<script language="javascript" src="./moduloprincipal/js/gen_validatorv4.js" type="text/javascript"></script>
-		<title>Gimansio</title>
+		<script language="javascript">
+		</script>
     </head>
-    <body>
+    <body onload="mover();">
 	<nav>
 	<div id="titulo" ><a href="index.php?controlador=principal&accion=mostrar"><img src="./moduloprincipal/vistas/img/TITULO.png"/></a>	</div>
 	<div id="principal">
