--- a/moduloprincipal/vistas/html/headlogin.html
+++ b/moduloprincipal/vistas/html/headlogin.html
@@ -3,10 +3,13 @@
 		<link rel="stylesheet" type="text/css" href="./moduloprincipal/vistas/css/index.css" />
 		<script language="javascript" src="jquery-1.8.2.js" type="text/javascript"></script>
 		<script language="javascript" src="./moduloprincipal/js/alta.js" type="text/javascript"></script>
+		<script language="javascript" src="./moduloprincipal/js/maps.js" type="text/javascript"></script>
 		<title>Gimnasio</title>
+		<script src="//maps.google.com/maps?file=api&amp;v=2&amp;sensor=false;key=AIzaSyAkBAnwZxAEVuWAUfZH5vMuxgWs-Sqrwg0"
+        type="text/javascript"></script>
     </head>
-    <body>
+    <body onload="initialize()" onunload="GUnload()">
 	<nav>
 		<div id="titulo"><a><img src="./moduloprincipal/vistas/img/TITULO.png"/></a></div>
-		<iframe width="325" height="250" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.es/maps/ms?msa=0&amp;msid=210969650543322292547.0004d0975df0c74be42dd&amp;ie=UTF8&amp;t=m&amp;ll=38.821538,-0.596051&amp;spn=0,0&amp;output=embed"></iframe><br /><small>Ver <a href="https://maps.google.es/maps/ms?msa=0&amp;msid=210969650543322292547.0004d0975df0c74be42dd&amp;ie=UTF8&amp;t=m&amp;ll=38.821538,-0.596051&amp;spn=0,0&amp;source=embed" style="color:#0000FF;text-align:left">Gimnasio Ferri</a> en un mapa más grande</small>
+		<div id="map_canvas" style="width: 400px; height: 300px"></div>
 	</nav>
