--- a/moduloprincipal/vistas/html/head.html
+++ b/moduloprincipal/vistas/html/head.html
@@ -4,9 +4,9 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" type="text/css" href="./moduloprincipal/vistas/css/index.css" />
 		<link rel="stylesheet" type="text/css" href="./moduloprincipal/vistas/css/menu.css" />
-		<link rel="stylesheet" href="./jquery-ui.css" />
-		<script type="text/javascript" src="jquery-1.8.2.js"></script>
-		<script type="text/javascript" src="jqueryUI.js"></script>
+		<link rel="stylesheet" href="./moduloprincipal/utilidades/jquery-ui.css" />
+		<script type="text/javascript" src="./moduloprincipal/utilidades/jquery-1.8.2.js"></script>
+		<script type="text/javascript" src="./moduloprincipal/utilidades/jqueryUI.js"></script>
 		<script type="text/javascript" src="./moduloprincipal/js/utilidades.js"></script>
 		<script language="javascript" src="./moduloprincipal/js/gen_validatorv4.js" type="text/javascript"></script>
 		<script language="javascript">
