--- a/moduloprincipal/vistas/html/headlogin.html
+++ b/moduloprincipal/vistas/html/headlogin.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 		<link rel="stylesheet" type="text/css" href="./moduloprincipal/vistas/css/index.css" />
-		<script language="javascript" src="jquery-1.8.2.js" type="text/javascript"></script>
+		<script type="text/javascript" src="./moduloprincipal/utilidades/jquery-1.8.2.js"></script>
 		<script language="javascript" src="./moduloprincipal/js/alta.js" type="text/javascript"></script>
 		<script language="javascript" src="./moduloprincipal/js/maps.js" type="text/javascript"></script>
 		<title>Gimnasio</title>
